--- a/config/corne.conf
+++ b/config/corne.conf
@@ -14,3 +14,34 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 
 # Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
 # CONFIG_ZMK_USB_LOGGING=y
+
+# -- CUSTOM DISPLAY CONFIG -- BEGIN
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+
+# This shield uses a fixed range for the chart and gauge deflection. If you set this option to n, it switches to a dynamic range, like the default nice!view shield, which adjusts based on the last 10 WPM values provided by ZMK.	y
+# bool, default = y
+# ONFIG_NICE_VIEW_GEM_WPM_FIXED_RANGE=y
+
+# Adjusts the maximum value of the fixed range to better align with your current goal.
+# int, default = 100
+# CONFIG_NICE_VIEW_GEM_WPM_FIXED_RANGE_MAX=100
+
+# If you find the animation distracting (or want to save battery), 
+# you can turn it off by setting this option to n. 
+# When disabled, a random animation frame is selected each time you restart your keyboard.
+# bool, default = y
+# CONFIG_NICE_VIEW_GEM_ANIMATION=y
+
+# When the animation is disabled, 
+# you can set this to a specific frame index (1–16) to display instead of a random one.	0
+# int, default=0
+# CONFIG_NICE_VIEW_GEM_ANIMATION_FRAME=0
+
+# Controls the animation speed. 
+# Higher values increase the delay between frames (for example, 96000 shows a new frame every couple of seconds). 
+# The animation has 16 frames; the default value of 960 milliseconds plays it at 60 fps.
+#
+# int, default=960
+# CONFIG_NICE_VIEW_GEM_ANIMATION_MS=960
+# -- CUSTOM DISPLAY CONFIG -- END
