--- a/.github/workflows/generate-keymap.yml
+++ b/.github/workflows/generate-keymap.yml
@@ -23,10 +23,10 @@ jobs:
         run: pip install keymap-drawer
 
       - name: Parse keymap
-        run: keymap parse -z config/corne.keymap > keymap.yaml
+        run: keymap parse -c keymap-drawer-config.yaml -z config/corne.keymap > keymap.yaml
 
       - name: Draw keymap
-        run: keymap draw keymap.yaml > keymap.svg
+        run: keymap draw -c keymap-drawer-config.yaml keymap.yaml > keymap.svg
 
       - name: Commit keymap
         uses: stefanzweifel/git-auto-commit-action@v4
