--- a/.github/workflows/generate-keymap.yml
+++ b/.github/workflows/generate-keymap.yml
@@ -26,7 +26,7 @@ jobs:
         run: keymap parse -z config/corne.keymap > keymap.yaml
 
       - name: Draw keymap
-        run: keymap draw -c keymap-drawer-config.yaml keymap.yaml > keymap.svg
+        run: keymap draw --config keymap-drawer-config.yaml keymap.yaml > keymap.svg
 
       - name: Commit keymap
         uses: stefanzweifel/git-auto-commit-action@v4
