edit: slow animation frame

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -43,5 +43,5 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 # The animation has 16 frames; the default value of 960 milliseconds plays it at 60 fps.
 #
 # int, default=960
-# CONFIG_NICE_VIEW_GEM_ANIMATION_MS=960
+CONFIG_NICE_VIEW_GEM_ANIMATION_MS=96000
 # -- CUSTOM DISPLAY CONFIG -- END
